--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 
 .header-content {
     max-width: 1200px;
-    margin: 0 auto;
+    margin:  auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,7 +63,7 @@ nav ul li a {
     background-color: #ee6c4d;
     color: white;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 4px;
     transition: background-color 0.3s;
 }
 
